--- a/digital-wave-games-api/docker-compose.yml
+++ b/digital-wave-games-api/docker-compose.yml
@@ -1,27 +1,68 @@
 version: '3'
 services:
-  db:
+  mysql:
     image: mysql:latest
-    container_name: mysql_digital_wave_games_mysql
+    container_name: digital_wave_games_mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: digital_wave_games
       MYSQL_PASSWORD: root
     volumes:
-      - /docker/data:/var/lib/mysql
-      - ./docker/bootstrap.sql:/docker-entrypoint-initdb.d/bootstrap.sql
+      - ./database/mysql/data:/var/lib/mysql
+      - ./database/mysql/bootstrap.sql:/docker-entrypoint-initdb.d/bootstrap.sql
     ports:
-      - 3307:3306
+      - 3306:3306
   mongodb:
     image: mongo:latest
-    container_name: mongodb_digital_wave_games_mongo
+    container_name: digital_wave_games_mongodb
     environment:
       MONGO_INITDB_ROOT_DATABASE: digital_wave_games_mongodb
     volumes:
-      - /docker/mongodb/data:/data/db
+      - ./database/mongodb/data:/data/db
     ports:
       - 27017:27017
   mongo-seed:
-    build: ./docker/mongo-seed
+    build: ./database/mongodb/mongo-seed
     depends_on:
       - mongodb
+  webapp:
+    image: app-api:latest
+    container_name: digital_wave_games_web_app
+    ports:
+      - "3006:3006"
+    depends_on:
+      - mysql
+      - mongodb
+  influxdb:
+    image: influxdb:1.8
+    ports:
+      - "8086:8086"
+    environment:
+      - INFLUXDB_DB=k6
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_BASIC_ENABLED=false
+      - GF_SERVER_SERVE_FROM_SUB_PATH=true
+    volumes:
+      - ./k6/grafana/dashboards:/var/lib/grafana/dashboards
+      - ./k6/grafana/grafana-dashboard.yaml:/etc/grafana/provisioning/dashboards/dashboard.yaml
+      - ./k6/grafana/grafana-datasource.yaml:/etc/grafana/provisioning/datasources/datasource.yaml
+
+  k6:
+    image: loadimpact/k6:latest
+    ports:
+      - "6565:6565"
+    environment:
+      - K6_OUT=influxdb=http://influxdb:8086/k6
+    volumes:
+      - ./k6/scripts:/scripts
+    depends_on:
+      - grafana
+      - influxdb
+  # ======== EXECUTAR PELO TERMINAL É MELHOR=========
+  #   command: run /scripts/demo.js
